test task added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 				<div id="task"><span id="a">0</span> + <span id="b">0</span> = <span id="question">?</span><input type="text" id="input3"></div>
 			</div>
 		</div>
+		<div class="row">
+			<a href="./task.pdf">Формулировка тестового задания</a>
+		</div>
 	</section><!-- container -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
