test task added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<a href="./task.pdf">Формулировка тестового задания</a>
+			<a href="./task.pdf" download>Формулировка тестового задания</a>
 		</div>
 	</section><!-- container -->
 
